--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
-.grid {
+.cell {
     height: 100px;
     width: 100px;
     font-size: 24px;
     border: 2px solid black;
+    text-align: center;
+    line-height: 100px;
+}
+
+.clicked {
+    background-color: dodgerblue;
 }
