add "toggle" for click in cell

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,22 @@
 .cell {
-    height: 100px;
-    width: 100px;
+    /* height: 100px;
+    width: 100px; */
     font-size: 24px;
     border: 2px solid black;
     text-align: center;
-    line-height: 100px;
+}
+
+.cell.d-one {
+    height: calc(100% / 10);
+    width: calc(100% / 10);
+}
+.cell.d-two {
+    height: calc(100% / 9);
+    width: calc(100% / 9);
+}
+.cell.d-three {
+    height: calc(100% / 7);
+    width: calc(100% / 7);
 }
 
 .clicked {
